Tue Oct 16 11:30:18 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_join): hide the result under construction until
	  return.

	* file.c (rb_file_join): check nul-byte only for strings, since
	  FilePathStringValue() does it.  [ruby-core:48012] [Bug #7168]

	* file.c (rb_file_join): path names must be ASCII-compatible.
	  [ruby-core:48012] [Bug #7168]

	* file.c (check_path_encoding): new function to ensure path name
	  encoding to be ASCII-compatible.

Tue Oct 16 09:40:04 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_regexp.rb
	  (TextRegexp#test_raw_hyphen_and_tk_char_type_after_range): use
	  Regexp.new instead of literal to ignore a parser warning.

Tue Oct 16 09:30:30 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_regexp.rb
	  (TextRegexp#test_raw_hyphen_and_tk_char_type_after_range): ignoring
	  warnings are already set in setup method.

Tue Oct 16 06:44:06 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (VM_CALLEE_SETUP_ARG): fix wrong condition.

Tue Oct 16 06:29:18 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_method): disable CI_SET_FASTPATH() if
	  this method call needs splat argument because cached functions
	  (vm_call_attrset, vm_call_ivar, vm_call_cfunc_fast_(unary|binary))
	  do not check an arity.

	* bootstraptest/test_method.rb: add a test to check an above issue.

Tue Oct 16 06:15:44 2012  Koichi Sasada  <ko1@atdot.net>

	* method.h: introduce new method type VM_METHOD_TYPE_CFUNC_FAST.
	  This method is similar to VM_METHOD_TYPE_CFUNC methods, but
	  called cfunc without building new frame (does not push new control
	  frame). If error is occurred in cfunc, the backtrace only shows
	  caller frame and upper.
	  This kind of methods can be added by rb_define_method_fast().
	  This feature is similar to specialized instructions (opt_plus, etc),
	  but more flexible (but a bit slower).

	* class.c (rb_define_method_fast): added.
	  Maybe it will be renamed soon.
